# starlite-minimal-starter

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.app_name}}/: pyproject.toml
{{cookiecutter.app_name}}/app/: main.py
