[tool.poetry]
name = "{{cookiecutter.app_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_mail}}>"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^3.10"
starlite = "1.5.1"
uvicorn = "0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
